Fixing those ugly text overflows
git-svn-id: https://svn.apache.org/repos/asf/synapse/branches/2.0@1039592 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -237,6 +237,7 @@ pre{
     margin-left:10px;
 }
 .command {
+    overflow: auto;
     border: 1px dashed #3c78b5;
     text-align: left;
     background-color: #f0f0f0;
@@ -247,6 +248,7 @@ pre{
     line-height: 13px;
 }
 .consoleOutput {
+    overflow: auto;
     white-space: pre;
     border: 1px dashed #3c78b5;
     font-size: 11px;
